--- a/main.css
+++ b/main.css
@@ -4,53 +4,32 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
 }
 
-.container {
-    display: flex;
-    max-width: 800px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.text-section {
-    padding: 40px;
-    flex: 1;
-}
-
-.text-section .badge {
-    display: inline-block;
-    background-color: #eee;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 14px;
+.logo {
+    font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
+    color: hwb(0 11% 89%);
+    margin-right: 20px;
+    text-decoration: none;
 }
 
-.text-section h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+.cv,
+.github,
+.tg {
+    font-size: 18px;
+    color: #333;
+    margin-right: 20px;
+    text-decoration: none;
 }
 
-.text-section p {
-    font-size: 16px;
-    line-height: 1.6;
-}
-
-.image-section {
-    flex: 0.8;
-    background-color: #f0f0f0;
-}
-
-.image-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.nav-link {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    list-style-type: none;
 }
