--- a/main.css
+++ b/main.css
@@ -4,9 +4,6 @@ body {
     color: #333;
     margin: 0;
     padding: 10px 100px;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     max-height: 1000px;
 }
 
@@ -17,30 +14,30 @@ body {
     padding: 30px;
     max-width: 1200px;
     margin: 0 auto;
-    /* padding: 10px 100px; */
 }
 
 .logo {
     font-size: 24px;
     font-weight: bold;
     color: hwb(0 11% 89%);
-    margin-left: 20px;
+    margin-left: 0px;
     text-decoration: none;
 }
 
+.blog,
 .cv,
 .github,
 .tg {
     font-size: 18px;
     color: #333;
-    margin-right: 20px;
+    margin-right: 0px;
     text-decoration: none;
 }
 
 .nav-link {
     display: flex;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 36px;
     list-style-type: none;
 }
 
@@ -89,3 +86,58 @@ body {
         height: auto;
         object-fit: cover;
     }
+
+
+@media screen and (max-width: 770px) {
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f9f9f9;
+        color: #333;
+        text-align: center;
+    }  
+
+    .container {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    header {
+        margin-bottom: 20px;
+    }
+
+    header h1 {
+        font-size: 36px;
+        margin: 0;
+    }
+
+    .label {
+        display: inline-block;
+        padding: 5px 10px;
+        background-color: #e0e0e0;
+        border-radius: 12px;
+        font-size: 12px;
+        margin-top: 5px;
+        color: #555;
+    }
+
+    .image-section {
+        width: 100%;
+            border-radius: 12px;
+            object-fit: cover;
+    }
+
+    .text {
+        text-align: left;
+        margin-top: 20px;
+    }
+
+    .text p {
+    margin: 10px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    }
+}
