--- a/mobile_ios.css
+++ b/mobile_ios.css
@@ -5,6 +5,7 @@
 
     .nav {
         padding: 0%; 
+        margin: 0%;
     }
 
     .nav-link {
@@ -22,6 +23,18 @@
 
     .burger-menu {
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 25px;
+        height: 18px;
+        cursor: pointer;
+    }
+    
+    .burger-menu span {
+        display: block;
+        height: 3px;
+        background-color: #333;
+        border-radius: 3px;
     }
 
     .nav.active .nav-link {
@@ -48,7 +61,7 @@
 
     .text-section h1 {
         text-align: left;
-        font-size: 3.124rem;
+        font-size: 3.6rem;
         line-height: 1.2;
         margin: 0;
         padding-bottom: 1.875rem;
@@ -62,10 +75,10 @@
         border-radius: 15px;
         font-weight: bold;
         font-size: 0.75rem; /* 12px */
-        margin-left: 1.25rem; /* 20px */
+        margin: 0px;
         position: absolute;
-        top: 1.875rem; /* 30px */
-        right: 0.3125rem; /* 5px */
+        top: 70px; /* 30px */
+        right: 0.1rem; /* 5px */
     }
 
     .text {
@@ -85,6 +98,5 @@
     .image-section img {
         max-width: 100%;
         border-radius: 15px;
-        /* padding-top: 30px; */
     }
 }
