--- a/main.css
+++ b/main.css
@@ -1,10 +1,53 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
+/* Сброс стилей браузера */ 
+* {
+    box-sizing: border-box;
+}
+html, body, div, span, object,h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
     margin: 0;
-    padding: 10px 100px;
-    max-height: 1000px;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* конец сброса стилей браузера */
+
+.clear:after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
+  
+  .clear {
+      zoom: 1;	
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
 }
 
 .nav {
@@ -16,12 +59,11 @@ body {
     margin: 0 auto;
 }
 
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: hwb(0 11% 89%);
-    margin-left: 0px;
-    text-decoration: none;
+.nav-link {
+    display: flex;
+    justify-content: flex-start;
+    gap: 36px;
+    list-style-type: none;
 }
 
 .blog,
@@ -34,40 +76,55 @@ body {
     text-decoration: none;
 }
 
-.nav-link {
-    display: flex;
-    justify-content: flex-start;
-    gap: 36px;
-    list-style-type: none;
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: hwb(0 11% 89%);
+    margin-left: 0px;
+    text-decoration: none;
 }
 
-.container {
+.info {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
+
+    gap: 50px;
     padding: 30px;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.text-section {
-    max-width: 50%;
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
 }
 
-.text-section .label {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #f0f0f0;
-    border-radius: 15px;
+h1 {
+    font-size: 80px;
     font-weight: bold;
-    font-size: 12px;
-    margin-bottom: 20px;
 }
 
-.text-section h1 {
-    font-size: 48px;
-    line-height: 1.2;
-    margin-bottom: 20px;
+.web {
+    display: block;
+}
+
+.devoloper-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.badge {
+    position: absolute;
+    top: -30px;
+    left: 92%;
+    transform: translateX(-50%);
+    padding: 5px 10px;
+    border: 0.5px solid rgba(211, 211, 211, 0.582);
+    border-radius: 15px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 .text {
@@ -76,13 +133,210 @@ body {
     gap: 20px;
     font-size: 16px;
     line-height: 1.6;
-    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
+.left { 
+    text-align: justify;
+    width: 45%;
+    margin-top: 12px;
+}
+
+.right {
+    text-align: justify;
+    width: 45%;
+    margin-top: 90px;
+}
+
+.image-section {
+    display: flex;
+    justify-content: center;
+    width: 35%;
+    align-items: center;
 }
 
 .image-section img {
-    display: flex;
+    max-width: 100%;
     border-radius: 10px;
-    max-width: 350px;
-    height: auto;
-    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        align-items: center;
+        font-size: 89px;
+        padding-left: 25px;
+    }
+
+    .text {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 760px;
+    }
+
+    .left,
+    .right {
+        width: 100%;
+        text-align: justify;
+        margin: 0 auto;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: center;
+        padding: 0 80px;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    
+    .container {
+        width: 100%;
+    }
+
+    .image-section {
+        position: absolute;
+        top: 290px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .image-section img {
+        max-width: 550px;
+    }
+
+    /* меню */
+
+    .nav {
+        position: relative;
+        padding: 30px 105px;
+    }
+
+    .nav-link {
+        display: none;
+        flex-direction: column;
+        gap: 16px;
+        background-color: #f9f9f9;
+        position: absolute;
+        top: 5rem;
+        right: 1rem;
+        width: 12.5rem;
+        padding: 0.625rem; /*10px*/
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    }
+
+    .burger-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 25px;
+        height: 18px;
+        cursor: pointer;
+    }
+    
+    .burger-menu span {
+        display: block;
+        height: 13%;
+        background-color: #333;
+        border-radius: 10px;
+    }
+
+    .nav.active .nav-link {
+        display: flex;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+    align-items: center;
+    font-size: 55px;
+    padding: 0px 25px;
+    padding-left: 35px;
+    }
+
+    .text {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 500px;
+    }
+
+    .left,
+    .right {
+        max-width: 100%;
+        text-align: justify;
+        margin: 0 auto;
+        padding: 0px 50px;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        margin: 0 auto;
+    }
+
+    .badge {
+        position: absolute;
+        top: -30px;
+        left: 90%;
+        transform: translateX(-50%);
+        padding: 5px 10px;
+        border: 0.5px solid rgba(211, 211, 211, 0.582);
+        border-radius: 15px;
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .image-section {
+        position: absolute;
+        top: 220px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .image-section img {
+        max-width: 350px;
+    }
+
+        /* меню */
+
+        .nav {
+            position: relative;
+            padding: 30px 35px;
+        }
+    
+        .nav-link {
+            display: none;
+            flex-direction: column;
+            gap: 16px;
+            background-color: #f9f9f9;
+            position: absolute;
+            top: 5rem;
+            right: 1rem;
+            width: 12.5rem;
+            padding: 0.625rem; /*10px*/
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+        }
+    
+        .burger-menu {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 25px;
+            height: 18px;
+            cursor: pointer;
+        }
+        
+        .burger-menu span {
+            display: block;
+            height: 13%;
+            background-color: #333;
+            border-radius: 10px;
+        }
+    
+        .nav.active .nav-link {
+            display: flex;
+        }
 }
